feat: 임시 카테고리 데이터 Loader 추가